--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+.roboto-font {
+    font-family: "Roboto", serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+}
+
+.abril-fatface-regular {
+    font-family: "Abril Fatface", serif;
+    font-weight: 400;
+    font-style: normal;
+}  
+
 body {
     background: #350A0E;
     /* width: 1440px;
