--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
     font-variation-settings: "wdth" 100;
 }
 
+.roboto-bold {
+    font-family: "Roboto", serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+}
+  
 .abril-fatface-regular {
     font-family: "Abril Fatface", serif;
     font-weight: 400;
@@ -36,9 +44,18 @@ body {
     background: rgba(217, 217, 217, 0.25);
     width: 660px;
     height: 467px;
-    flex-shrink: 0;
+    color: white;
 }
 
-.login-container h1 {
-    color: #fff;
+.facebook-login, .google-login {
+    border-radius: 50px;
+    border: none;
+    width: 40px;
+    height: 40px;
+}
+
+.link-register {
+    text-decoration: none;
+    color: #E1BB3E;
+    font-weight: bold;
 }
