--- a/style.css
+++ b/style.css
@@ -66,9 +66,8 @@ body {
     margin: 5px;
     display: flex;
     justify-content: center;
-    align-items: ;
+    align-items: center;
 }
-
 
 .link-register {
     text-decoration: none;
