--- a/style.css
+++ b/style.css
@@ -69,9 +69,13 @@ input, .login-button, .forgot-button {
 
 .forgot-button {
     text-decoration: none;
-    color: #fff
+    color: #fff;
+    font-size: 12px;
+    display: block;
+    text-align: left;
+    margin: 0 0 0 32px; 
 }
-
+  
 .social-login {
     display: flex;
     justify-content: center;
